--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@ box-sizing: border-box;
 .container{
     width: 100%;
     min-height: 100vh;
-    background-color: rgb(248, 227, 185);
-    padding: 10px;
+    background-color: rgba(248, 227, 185, 0.389);
+
 }
 .todo{
     width: 100%;
     max-width: 540px;
     background-color: #ffffff;
-    margin: 100px auto 20px;
+    margin: 50px auto 20px;
     padding: 40px 30px 70px;
     border-radius: 10px;
 
